# src/controllers/auth.controller.js
@@ -3,7 +3,7 @@ const { NOT_FOUND } = require("http-status");
 const { authService } = require("../services");
 const httpStatus = require("http-status");
 
-const userLogin = async (req, res, next) => {
+const userLogin = async (req, res) => {
   try {
     const { email, password } = req.body;
     const tokens = await authService.userLogin({ email, password });
@@ -12,18 +12,16 @@ const userLogin = async (req, res, next) => {
       refreshToken: tokens.refreshToken,
     });
   } catch (error) {
-    // next(error);
     res.status(error.statusCode || 500).json({ message: error.message });
   }
 };
 
-const refreshToke = async (req, res, next) => {
+const refreshToke = async (req, res) => {
   try {
     const { refreshToken } = req.body;
     const accessToken = await authService.refreshToken({ refreshToken });
     res.json({ accessToken });
   } catch (error) {
-    // next(error);
     res.status(error.statusCode || 500).json({ message: error.message });
   }
 };
@@ -37,16 +35,14 @@ const resetPassword = async (req, res, next) => {
     });
   } catch (error) {
     if (error.statusCode === httpStatus.NOT_FOUND) {
-      // User not found error
       res.status(httpStatus.NOT_FOUND).json({ message: error.message });
     } else {
-      // Other errors
       next(error);
     }
   }
 };
 
-const resetPasswordToken = async (req, res, next) => {
+const resetPasswordToken = async (req, res) => {
   try {
     const verificationToken = req.params.token;
     const { newPassword, confirmNewPassword } = req.body;
@@ -58,12 +54,11 @@ const resetPasswordToken = async (req, res, next) => {
       res.json({ message: "everything is updated" });
     }
   } catch (error) {
-    // next(error);
     res.status(error.statusCode || 500).json({ message: error.message });
   }
 };
 
-const verifyToken = async (req, res, next) => {
+const verifyToken = async (req, res) => {
   try {
     const verificationToken = req.params.token;
     const success = await authService.verifyToken(verificationToken);
@@ -71,7 +66,6 @@ const verifyToken = async (req, res, next) => {
       res.json({ message: "Account verified successfully." });
     }
   } catch (error) {
-    // next(error);
     res.status(error.statusCode || 500).json({ message: error.message });
   }
 };
